ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.5, 3.1.5
    • Affects Version/s: 3.0.0-rc10
    • Component/s: WiredTiger
    • Fully Compatible
    • ALL
    • Quint Iteration 3.1.2, Quint Iteration 3, Quint Iteration 5
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Issue Status as of Jul 14, 2015

      ISSUE SUMMARY
      WiredTiger allows MongoDB to open an unbounded number of WiredTiger sessions, which means that despite a limited number of WiredTiger cursors per session, the total number of cached sessions an cursors may lead to excessive memory use.

      USER IMPACT
      MongoDB with WiredTiger may consume too much memory in some situations, leading to excessive memory use beyond the normal WiredTiger database cache, potentially triggering out of memory conditions and even the OOM killer.

      WORKAROUNDS
      None.

      AFFECTED VERSIONS
      MongoDB 3.0.0 through 3.0.4.

      FIX VERSION
      The fix is included in the 3.0.5 production release.

      Original description

      Running RC10 with the c# driver, 50 threads concurrently bulk inserting/updating/reading, I see stacktraces in the console output followed by a big speed drop. The speed drop appears to be related to reads, but I can't be sure yet.

      I will attempt to reproduce this with a long running test and report back.

        1. mongo.png
          mongo.png
          143 kB
        2. mongoMem.png
          mongoMem.png
          47 kB

            Assignee:
            Michael Cahill
            Reporter:
            Nick Judson
            Votes:
            3 Vote for this issue
            Watchers:
            35 Start watching this issue

              Created:
              Updated:
              Resolved: