SERVER-17386 Implement a non-locking, single-partition session cache for WiredTiger.